syntax = "proto3";

package user;

service User {
    rpc GetUserInfoByID(UserInfo) returns (UserInfo) {}
}

message UserInfo {
    uint32 id = 1;
    string name = 2;
    string email = 3;
}